menambahkan fungsi video campaign, service worker dan offline

--- a/app/views/admin/bantuan/form-update.html
+++ b/app/views/admin/bantuan/form-update.html
@@ -296,6 +296,12 @@
                                             <i class="ni ni-image"></i>
                                         </div>
                                     </div>
+                                    <div class="col-12">
+                                        <div class="form-group" id="youtube-link-video">
+                                            <label for="youtube-link-video" class="form-control-label">Id Video Youtube</label>
+                                            <input type="text" name="id_video_youtube" class="form-control" placeholder="Link video Campaign di Youtube atau id video" <?= (isset($this->data['bantuan']->id_video_youtube) ? 'value="'. $this->data['bantuan']->id_video_youtube .'"' : ''); ?>>
+                                        </div>
+                                    </div>
                                     <div class="col-12 mt-2 buttons">
                                         <button type="button" class="btn btn-link text-warning m-0"
                                             data-target="v-pills-tahap-3-tab">Kembali Ke Tahap 3</button>
