--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -1,5 +1,6 @@
 <!-- End Header Area -->
 <!-- Hero Area -->
+<!-- <center class="bg-danger text-white font-weight-bold rounded m-3">INI BARU</center> -->
 <section class="hero-area section">
     <div class="main__circle3 bg-light"></div>
     <div id="banner-carousel" class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-interval="5000">
