--- a/app/views/admin/bantuan/formulir.html
+++ b/app/views/admin/bantuan/formulir.html
@@ -247,6 +247,12 @@
                                             <i class="ni ni-image"></i>
                                         </div>
                                     </div>
+                                    <div class="col-12">
+                                        <div class="form-group" id="youtube-link-video">
+                                            <label for="youtube-link-video" class="form-control-label">Link Youtube</label>
+                                            <input type="text" name="id_video_youtube" class="form-control" placeholder="Link video Campaign di Youtube atau id video">
+                                        </div>
+                                    </div>
                                     <div class="col-12 mt-2 buttons">
                                         <button type="button" class="btn btn-link text-warning m-0"
                                             data-target="v-pills-tahap-3-tab">Kembali Ke Tahap 3</button>
