--- a/app/views/default.html
+++ b/app/views/default.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=220124">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>
