menambah fungsi video pada deskripsi selengkapnya, memperbaiki bug pada submit on focus bantuan, menambah shoppepay, medisain kartu dana donasi

--- a/app/views/admin/bantuan/data.html
+++ b/app/views/admin/bantuan/data.html
@@ -206,6 +206,22 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-md-6 col-lg-12 card">
+                <div class="rounded p-3">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="col-auto">
+                            <b>Saldo</b>
+                            <span class="text-muted">
+                                <?= Output::tSparator($this->data['saldo_bantuan']->saldo_shopeepay); ?>
+                            </span>
+                        </div>
+                        <div class="col-3">
+                            <img src="<?= $this->data['saldo_bantuan']->path_gambar_shopeepay; ?>" alt="ShopeePay"
+                                class="img-fluid saldo">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-12 col-md-6 col-lg-12 card bg-transparent">
                 <div class="row flex-column">
                     <div class="col">
