--- a/app/views/admin/bantuan/form-update.html
+++ b/app/views/admin/bantuan/form-update.html
@@ -297,9 +297,9 @@
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <div class="form-group" id="youtube-link-video">
+                                        <div class="form-group">
                                             <label for="youtube-link-video" class="form-control-label">Id Video Youtube</label>
-                                            <input type="text" name="id_video_youtube" class="form-control" placeholder="Link video Campaign di Youtube atau id video" <?= (isset($this->data['bantuan']->id_video_youtube) ? 'value="'. $this->data['bantuan']->id_video_youtube .'"' : ''); ?>>
+                                            <input id="youtube-link-video" type="text" name="id_video_youtube" class="form-control" placeholder="Link video Campaign di Youtube atau id video" <?= (isset($this->data['bantuan']->id_video_youtube) ? 'value="'. $this->data['bantuan']->id_video_youtube .'"' : ''); ?>>
                                         </div>
                                     </div>
                                     <div class="col-12 mt-2 buttons">
