--- a/app/views/admin/bantuan/formulir.html
+++ b/app/views/admin/bantuan/formulir.html
@@ -248,9 +248,9 @@
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <div class="form-group" id="youtube-link-video">
+                                        <div class="form-group">
                                             <label for="youtube-link-video" class="form-control-label">Link Youtube</label>
-                                            <input type="text" name="id_video_youtube" class="form-control" placeholder="Link video Campaign di Youtube atau id video">
+                                            <input id="youtube-link-video" type="text" name="id_video_youtube" class="form-control" placeholder="Link video Campaign di Youtube atau id video">
                                         </div>
                                     </div>
                                     <div class="col-12 mt-2 buttons">
