--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -141,7 +141,7 @@
             </div>
             <?php if (isset($data['deskripsi']->len)) { ?>
             <div class="col-12 p-md-3 rounded-box">
-                <div class="row justify-content-center">
+                <div class="row m-0 justify-content-center">
                     <div class="col-lg-8 px-md-0 hidden-area-utility" id="selengkapnya">
                     </div>
                 </div>
