--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-12 col-xl-8">
+    <div class="col-12">
         <div class="card" id="list-donasi">
             <div class="card-header d-flex justify-content-between flex-column flex-md-row"
                 style="row-gap: 1rem; column-gap: .25rem;">
@@ -202,9 +202,9 @@
             </div>
         </div>
     </div>
-    <div class="col-12 col-xl-4">
-        <div class="row px-3" id="cp-card">
-            <div class="col-12 col-md-6 card p-0 bg-gradient-gray overflow-hidden text-white d-flex align-items-center"
+    <div class="col-12">
+        <div class="row gap-4 m-0" id="cp-card">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-gradient-gray overflow-hidden text-white d-flex align-items-center"
                 data-cp="bank-bjb">
                 <img src="/assets/images/partners/gunung-gunungan.png" alt="Gunung-gunungan" class="py-3">
                 <div class="card-body p-3 d-flex flex-column justify-content-between w-100">
@@ -234,7 +234,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 card p-0 bg-gradient-success overflow-hidden text-white" data-cp="bank-bsi">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-gradient-success overflow-hidden text-white" data-cp="bank-bsi">
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
@@ -262,7 +262,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 card p-0 bg-warning text-white overflow-hidden" data-cp="bank-bri">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-warning text-white overflow-hidden" data-cp="bank-bri">
                 <div class="strip-top"></div>
                 <div class="strip-bottom"></div>
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
@@ -292,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 card p-0 bg-gradient-gray text-white overflow-hidden" data-cp="bank-mandiri">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-gradient-gray text-white overflow-hidden" data-cp="bank-mandiri">
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
@@ -320,7 +320,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 card p-0 bg-white overflow-hidden" data-cp="tunai" style="display: grid;">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-white overflow-hidden" data-cp="tunai" style="display: grid;">
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
@@ -349,7 +349,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 card p-0 bg-white overflow-hidden" data-cp="gopay" style="display: grid;">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-white overflow-hidden" data-cp="gopay" style="display: grid;">
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
@@ -372,12 +372,13 @@
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/partners/gpn.png" alt="GPN" class="img-fluid img-center">
+                            <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
+                                class="img-fluid img-center">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 card p-0 bg-white overflow-hidden" data-cp="dana" style="display: grid;">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-white overflow-hidden" data-cp="dana" style="display: grid;">
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
@@ -400,7 +401,37 @@
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/partners/gpn.png" alt="GPN" class="img-fluid img-center">
+                            <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
+                                class="img-fluid img-center">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 card p-0 m-0 bg-white overflow-hidden" data-cp="shopeepay" style="display: grid;">
+                <div class="card-body p-3 d-flex flex-column justify-content-between">
+                    <div class="row g-0">
+                        <div class="col saldo">
+                            <small class="text-black-50 font-weight-bolder">Saldo E-Wallet Via Dana</small>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_shopeepay); ?>
+                            </div>
+                        </div>
+                        <div class="col-3 logo-cp">
+                            <img src="/assets/images/partners/shopeepay.png" alt="Dana" class="img-fluid img-center">
+                        </div>
+                    </div>
+                    <div class="row g-0 align-items-end">
+                        <div class="col">
+                            <h6 class="m-0">
+                                <div>Dana</div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_shopeepay; ?>
+                                </div>
+                            </h6>
+                        </div>
+                        <div class="col-3">
+                            <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
+                                class="img-fluid img-center">
                         </div>
                     </div>
                 </div>
