memperbaharui service worker yang tertunda di bulan ramadhan

--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-4 col-md-6">
+    <div class="col-xl-4 col-md">
         <div class="card card-stats">
             <!-- Card body -->
             <div class="card-body">
@@ -210,13 +210,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between w-100">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-white-50 font-weight-bolder">Saldo Donasi Via BJB</small>
+                            <small class="text-white-50 font-weight-bolder">Total Donasi Masuk Via BJB</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_bjb); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/bjb-white.png" alt="BJB" class="img-fluid img-center">
+                            <img src="/assets/images/partners/bjb-white.png" alt="BJB" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -229,7 +229,7 @@
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center">
+                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -238,13 +238,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-white-50 font-weight-bolder">Saldo Donasi Via BSI</small>
+                            <small class="text-white-50 font-weight-bolder">Total Donasi Masuk Via BSI</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_bsi); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/bsi-white.png" alt="BSI" class="img-fluid img-center">
+                            <img src="/assets/images/partners/bsi-white.png" alt="BSI" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -257,7 +257,7 @@
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center">
+                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -268,13 +268,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-white-50 font-weight-bolder">Saldo Donasi Via BRI</small>
+                            <small class="text-white-50 font-weight-bolder">Total Donasi Masuk Via BRI</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_bri); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/bri-white.png" alt="BRI" class="img-fluid img-center">
+                            <img src="/assets/images/partners/bri-white.png" alt="BRI" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -287,7 +287,7 @@
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center">
+                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -296,13 +296,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-white-50 font-weight-bolder">Saldo Donasi Via Mandiri</small>
+                            <small class="text-white-50 font-weight-bolder">Total Donasi Masuk Via Mandiri</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_mandiri); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/mandiri.png" alt="Mandiri" class="img-fluid img-center">
+                            <img src="/assets/images/partners/mandiri.png" alt="Mandiri" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -315,7 +315,7 @@
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center">
+                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -324,13 +324,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-black-50 font-weight-bolder">Saldo Donasi Tunai</small>
+                            <small class="text-black-50 font-weight-bolder">Total Donasi Masuk Tunai</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_tunai); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/tunai.png" alt="Tunai" class="img-fluid img-center">
+                            <img src="/assets/images/partners/tunai.png" alt="Tunai" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -344,7 +344,7 @@
                         </div>
                         <div class="col-3">
                             <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
-                                class="img-fluid img-center">
+                                class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -353,13 +353,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-black-50 font-weight-bolder">Saldo E-Wallet Via Gopay</small>
+                            <small class="text-black-50 font-weight-bolder">Total Donasi Masuk Via Gopay</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_gopay); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/gopay.png" alt="Gopay" class="img-fluid img-center">
+                            <img src="/assets/images/partners/gopay.png" alt="Gopay" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -373,7 +373,7 @@
                         </div>
                         <div class="col-3">
                             <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
-                                class="img-fluid img-center">
+                                class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -382,13 +382,13 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-black-50 font-weight-bolder">Saldo E-Wallet Via Dana</small>
+                            <small class="text-black-50 font-weight-bolder">Total Donasi Masuk Via Dana</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_dana); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/dana.png" alt="Dana" class="img-fluid img-center">
+                            <img src="/assets/images/partners/dana.png" alt="Dana" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
@@ -402,7 +402,7 @@
                         </div>
                         <div class="col-3">
                             <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
-                                class="img-fluid img-center">
+                                class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
@@ -411,19 +411,19 @@
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
                         <div class="col saldo">
-                            <small class="text-black-50 font-weight-bolder">Saldo E-Wallet Via Dana</small>
+                            <small class="text-black-50 font-weight-bolder">Total Donasi Masuk Via ShoopePay</small>
                             <div>
                                 <?= Output::tSparator($data['saldo_donasi']->saldo_shopeepay); ?>
                             </div>
                         </div>
                         <div class="col-3 logo-cp">
-                            <img src="/assets/images/partners/shopeepay.png" alt="Dana" class="img-fluid img-center">
+                            <img src="/assets/images/partners/shopeepay.png" alt="ShoopePay" class="img-fluid img-center w-100">
                         </div>
                     </div>
                     <div class="row g-0 align-items-end">
                         <div class="col">
                             <h6 class="m-0">
-                                <div>Dana</div>
+                                <div>ShoopePay</div>
                                 <div class="font-weight-300">
                                     <?= $data['saldo_donasi']->nomor_shopeepay; ?>
                                 </div>
@@ -431,7 +431,7 @@
                         </div>
                         <div class="col-3">
                             <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
-                                class="img-fluid img-center">
+                                class="img-fluid img-center w-100">
                         </div>
                     </div>
                 </div>
